Refactor Dockerfile and Makefile